--- a/src/pug/config.pug
+++ b/src/pug/config.pug
@@ -5,8 +5,8 @@
   let lang = 'en'
   let Bootstrap4 = false
   let jQuery = false
-  let GoogleFonts = 'Open+Sans'
-  let fontWeight = '300;400;600;700'
+  let GoogleFonts = 'Special+Elite'
+  let fontWeight = '400'
   let screenSm = '0'
   let screenMd = '640px'
   let screenLg = '1280px'
