--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -33,6 +33,7 @@
   min-width: 320px;
   min-height: 100%;
   scroll-behavior: smooth;
+  font-size: 62.5%;
 
   &__inner {
     display: flex;
@@ -66,10 +67,10 @@ body {
   margin: 0;
   word-break: break-word;
   font-family: $font-family;
+  font-weight: 400;
   line-height: $line-height;
   text-align: left;
-  color: #eee;
-  background-color: #444;
+  background-color: #ccc;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -205,12 +206,12 @@ h6 {
   color: currentColor;
 }
 
-h1 { font-size: $font-size-h1; } // stylelint-disable-line
-h2 { font-size: $font-size-h2; } // stylelint-disable-line
-h3 { font-size: $font-size-h3; } // stylelint-disable-line
-h4 { font-size: $font-size-h4; } // stylelint-disable-line
-h5 { font-size: $font-size-h5; } // stylelint-disable-line
-h6 { font-size: $font-size-h6; } // stylelint-disable-line
+// h1 { font-size: $font-size-h1; } // stylelint-disable-line
+// h2 { font-size: $font-size-h2; } // stylelint-disable-line
+// h3 { font-size: $font-size-h3; } // stylelint-disable-line
+// h4 { font-size: $font-size-h4; } // stylelint-disable-line
+// h5 { font-size: $font-size-h5; } // stylelint-disable-line
+// h6 { font-size: $font-size-h6; } // stylelint-disable-line
 
 p,
 ul,
@@ -242,6 +243,7 @@ ul,
 ol {
   margin-bottom: $typo-margin-vertical;
   padding-left: 1.5em;
+  list-style-type: none;
 
   ul,
   ol {
