--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,18 +2,23 @@ extends ../pug/layout.pug
 
 append config
   -
-    currentTitle = 'Главная'
-    currentDescription = 'Pink app'
+    currentTitle = 'Home'
+    currentDescription = 'Classic Cars website'
     currentUrl = 'index.html'
 
+block header
+  +page-header()
+    .navbar__menu-btn
+      .navbar__menu-line
+      .navbar__menu-line
+
+    nav.navbar.target
+      a.navbar__link(href='#home') Home
+      a.navbar__link(href='#popular-cars') Popular Cars
+      a.navbar__link(href='#video-gallery') Video Gallery
+      a.navbar__link(href='#contact') Contact
+    ///.navbar
+
 block content
-
-  h1 Top news
-
-  ol
-    li Man Found Having Tea Party With Donkey Again
-    li Woman With Epic Tattoo Arrested for 37th Time
-    li Viral Photo of Donkey Had Been Photoshopped
-    li Man Buys Hats For Low Income Local Family
-    li Man Jailed For Threatening Wife With Crumpled Hawk
-    li Small Tornado Forcast in Northern Regions
+  .page__wrapper
+    section
