Fixed navbar with animation (JS)

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -8,7 +8,7 @@ append config
 
 block header
   +page-header()
-    .navbar__menu-btn
+    .navbar__menu-btn.target
       .navbar__menu-line
       .navbar__menu-line
 
@@ -21,4 +21,4 @@ block header
 
 block content
   .page__wrapper
-    section
+    section.target
