--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -45,6 +45,31 @@
     flex-grow: 1;
   }
 
+  &__wrapper {
+    width: 100%;
+    perspective: 50rem;
+
+    section {
+      position: relative;
+      // left: 15vw;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      margin-bottom: 3rem;
+
+      transform-origin: left;
+      transition: left 0.5s, transform 0.5s;
+
+      background-color: #efefef;
+      box-shadow: 0.5rem 0.5rem 1rem #aaa;
+    }
+
+    .change {
+      left: 15vw;
+      transform: rotateY(10deg);
+    }
+  }
+
   &__footer-wrapper {
     flex-shrink: 0;
   }
@@ -65,6 +90,8 @@ body {
   flex-direction: column;  // и прижимаем footer в IE 10-11
   min-height: 100%;
   margin: 0;
+  padding-right: 3rem;
+
   word-break: break-word;
   font-family: $font-family;
   font-weight: 400;
