--- a/src/blocks/navbar/navbar.scss
+++ b/src/blocks/navbar/navbar.scss
@@ -66,8 +66,9 @@
   &__link {
     margin: 2rem 0;
 
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Special Elite', cursive;
     font-size: 1.5rem;
+    font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 0.3rem;
