--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -6,61 +6,59 @@
 
   $block-name:                &; // #{$block-name}__element
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  z-index: 0;
-  min-width: 200px;
-  padding: 0 15px;
-  margin-bottom: 30px;
+  @include col(lg, 4, 12, 0);
+
 
   &__inner {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    align-items: center;
     position: relative;
-    width: 100%;
-    margin-bottom: 20px;
+    margin: 0 3rem;
+    padding: 1rem;
+
+    transition: box-shadow 0.5s;
+    box-shadow: 0.6rem 0.6rem 0.6rem #bbb;
+    background-color: #fff;
+
+    &:hover {
+      box-shadow: 1rem 1rem 1rem #bbb;
+    }
   }
 
-  &__img-wrap {
-    display: block;
-    flex-shrink: 0;
-    margin-bottom: 20px;
-  }
-
-  &__img {
-    display: block;
-  }
-
-  &__title {
-    margin: 0 0 20px;
-  }
-
-  &__new {
+  &__name {
     position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 50%;
-    padding: 5px 10px;
-    line-height: 1;
-    font-weight: 700;
+    z-index: 10;
+    top: 2rem;
+    left: 2rem;
+    margin: 0;
+
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
     color: #fff;
-    background: $color-success;
-    transform: translateX(-50%) rotate(-10deg);
   }
 
   &__price {
-    flex-shrink: 0;
-    margin: auto 0 0;
-    font-size: $font-size-h3;
-    font-weight: 700;
-    line-height: 1;
+    margin: 0.5rem 0;
+
+    font-size: 1.8rem;
+    color: #777;
   }
 
-  &__buy {
-    flex-shrink: 0;
+  &__btn {
+    width: 100%;
+    margin-top: 1rem;
+    border: none;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    letter-spacing: 0.3rem;
+    color: #fff;
+
+    transition: all 0.5s;
+    text-shadow: 0.1rem 0.1rem 0.3rem #000;
+    box-shadow: 0.1rem 0.1rem 0.5rem #bbb;
+    background-color: #fff;
+    cursor: pointer;
   }
 }
