--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -32,3 +32,49 @@ block content
         'ext': 'png'
       }, 'hero__img')
     ///.hero
+
+  .page__wrapper
+    section.popular-cars.target#popular-cars
+      h2.section-heading Popular Cars
+
+      .popular-cars__wrapper
+
+        .card
+          .card__inner
+            h3.card__name Car Name
+            +picture({
+              'img': 'popular-cars-01',
+              'alt': 'Classic Car',
+              'lg': false,
+              'md': true,
+              'ext': 'jpg'
+            }, 'popular-cars__img')
+            h4.card__price $ 200,000
+            +btn('See more')(class='card__btn', href='#')
+
+        .card
+          .card__inner
+            h3.card__name Car Name
+            +picture({
+              'img': 'popular-cars-02',
+              'alt': 'Classic Car',
+              'lg': false,
+              'md': true,
+              'ext': 'jpg'
+            }, 'popular-cars__img')
+            h4.card__price $ 100,000
+            +btn('See more')(class='card__btn', href='#')
+
+        .card
+          .card__inner
+            h3.card__name Car Name
+            +picture({
+              'img': 'popular-cars-03',
+              'alt': 'Classic Car',
+              'lg': false,
+              'md': true,
+              'ext': 'jpg'
+            }, 'popular-cars__img')
+            h4.card__price $ 150,000
+            +btn('See more')(class='card__btn', href='#')
+    ///.popular-cars
