--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -92,7 +92,7 @@ $retina-dppx:                 1.5dppx;
 // Модульная сетка
 
 $grid-columns:                12;
-$grid-gutter-width:           30px;
+$grid-gutter-width:           0;
 
 
 
