--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -51,11 +51,11 @@
 
     section {
       position: relative;
-      // left: 15vw;
       left: 0;
       width: 100%;
       height: 100vh;
       margin-bottom: 3rem;
+      padding: 5rem 0;
 
       transform-origin: left;
       transition: left 0.5s, transform 0.5s;
