--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -165,3 +165,17 @@ block content
         }, 'image-gallery__img')
 
     ///.image-gallery
+
+  .page__wrapper
+    section.contact.target#contact
+      h2.section-heading Contact Us
+
+      form.contact__form
+        input(type='text', name='name', placeholder='Your Full Name')
+        input(type='email', name='email', placeholder='Your Email')
+        textarea(name='comment', placeholder='Your Message')
+        input(type='submit', value='Submit')
+
+      p.contact__copyright
+        | Copyright &copy; CodeAndCreate All Rights Reserved
+    ///.contact
