--- a/src/blocks/image-gallery/image-gallery.scss
+++ b/src/blocks/image-gallery/image-gallery.scss
@@ -10,15 +10,53 @@
   flex-direction: column;
   justify-content: space-between;
 
+  .page & {
+
+    @media (max-width: 1500px) {
+      height: auto;
+      padding-bottom: 0;
+    }
+  }
+
+  .section-heading {
+
+    @media (max-width: 1500px) {
+      margin-bottom: 25rem;
+    }
+
+    @media (max-width: 800px) {
+      margin-bottom: 10rem;
+    }
+  }
+
   .picture {
     position: absolute;
     bottom: 6rem;
     left: 50%;
-    max-width: 320px;
+    max-width: 25%;
 
     transform: translateX(-50%) rotateX(0.5deg);
     transform-origin: bottom;
     transition: all 0.3s;
+
+    @media (max-width: 1500px) {
+
+      &:first-of-type {
+        left: 21%;
+      }
+
+      &:last-of-type {
+        left: 79%;
+      }
+    }
+
+    @media (max-width: 1000px) {
+      max-width: 25%;
+    }
+
+    @media (max-width: 750px) {
+      bottom: 3rem;
+    }
 
     &:first-of-type {
       left: 28%;
@@ -43,6 +81,14 @@
     justify-content: center;
     margin: 10rem 0;
     perspective: 10rem;
+
+    @media (max-width: 1500px) {
+      margin-bottom: 15rem;
+    }
+
+    @media (max-width: 800px) {
+      margin-bottom: 10rem;
+    }
   }
 
   &__img {
@@ -60,6 +106,15 @@
     box-shadow: 1rem 1rem 5rem #444;
     background-color: rgba(38, 126, 199, 0.8);
 
+    @media (max-width: 1500px) {
+      width: 90%;
+    }
+
+    @media (max-width: 750px) {
+      width: 95%;
+      height: 1.5rem;
+    }
+
     &::before {
       content: '';
       position: absolute;
@@ -70,6 +125,11 @@
       transform: rotateX(20deg);
       transform-origin: bottom;
       background-color: rgba(34, 152, 248, 0.7);
+
+      @media (max-width: 750px) {
+        top: -5rem;
+        height: 5rem;
+      }
     }
   }
 }
