--- a/src/blocks/contact/contact.scss
+++ b/src/blocks/contact/contact.scss
@@ -111,6 +111,10 @@
 
   .page & {
     margin-bottom: 0;
+
+    @media (max-width: 1500px) {
+      height: auto;
+    }
   }
 
   &__form {
@@ -123,6 +127,15 @@
     padding: 5rem;
 
     background-color: rgba(255, 255, 255, 0.2);
+
+    @media (max-width: 1500px) {
+      margin-bottom: 5rem;
+    }
+
+    @media (max-width: 600px) {
+      width: 95%;
+      border: 1rem solid rgba(255, 255, 255, 0.8);
+    }
 
     input,
     textarea {
@@ -167,5 +180,9 @@
     font-weight: 300;
     text-align: center;
     color: #fff;
+
+    @media (max-width: 400px) {
+      width: 80%;
+    }
   }
 }
