--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -15,6 +15,10 @@
   background-position: center;
   background-size: cover;
 
+  @media (max-width: 1500px) {
+    justify-content: space-evenly;
+  }
+
   @media (min-width: $screen-xs) {
     background-image: url('../img/hero-bg-02-320p.webp');
 
@@ -71,5 +75,9 @@
 
   &__img {
     width: 70%;
+
+    @media (max-width: 1000px) {
+      width: 90%;
+    }
   }
 }
