--- a/src/blocks/navbar/navbar.scss
+++ b/src/blocks/navbar/navbar.scss
@@ -20,6 +20,28 @@
   transition: all 0.5s;
   background-color: #fff;
 
+  @media (max-width: 1500px) {
+    left: -20vw;
+    width: 20vw;
+    padding-top: 2rem;
+    padding-left: 2rem;
+  }
+
+  @media (max-width: 1000px) {
+    left: -25vw;
+    width: 25vw;
+  }
+
+  @media (max-width: 750px) {
+    left: -30vw;
+    width: 30vw;
+
+    @media (max-width: 600px) {
+      left: -40vw;
+      width: 40vw;
+    }
+  }
+
   &.change {
     left: 0;
   }
@@ -53,6 +75,22 @@
   &__menu-btn.change {
     left: 15vw;
     transform: rotate(45deg);
+
+    @media (max-width: 1500px) {
+      left: 20vw;
+    }
+
+    @media (max-width: 1000px) {
+      left: 25vw;
+    }
+
+    @media (max-width: 750px) {
+      left: 30vw;
+
+      @media (max-width: 600px) {
+        left: 40vw;
+      }
+    }
 
     #{$block-name}__menu-line:first-child {
       transform: rotate(270deg) translateX(-0.4rem);
