--- a/src/blocks/popular-cars/popular-cars.scss
+++ b/src/blocks/popular-cars/popular-cars.scss
@@ -11,10 +11,26 @@
   align-items: center;
   justify-content: space-around;
 
+  .page & {
+
+    @media (max-width: 1500px) {
+      height: auto;
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+    }
+  }
+
   &__wrapper {
     @include row;
 
     width: 90%;
+
+    @media (min-width: $screen-xs) {
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+    }
   }
 
   &__img {
