--- a/src/blocks/section-heading/section-heading.scss
+++ b/src/blocks/section-heading/section-heading.scss
@@ -15,4 +15,16 @@
   letter-spacing: 1rem;
   color: #fff;
   text-shadow: 0.3rem 0.3rem 0.5rem #555;
+
+  @media (max-width: 1500px) {
+    font-size: 7rem;
+  }
+
+  @media (max-width: 750px) {
+    font-size: 5.5rem;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 4.5rem;
+  }
 }
